--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <canvas id="skyCanvas" style="background-image:url(images/sky.png); background-size :cover;"></canvas>
-    <canvas id="skySnow"></canvas>
+    <canvas id="skySnow" class="drawingCanvas"></canvas>
     <canvas id="mountainCanvas" style="background-image:url(images/mountain.png); background-size :cover;"></canvas>
-    <canvas id="mountainSnow"></canvas>
+    <canvas id="mountainSnow" class="drawingCanvas"></canvas>
     <canvas id="land2Canvas" style="background-image:url(images/land2.png) ; background-size :cover;"></canvas>
-    <canvas id="land2Snow"></canvas>
+    <canvas id="land2Snow" class="drawingCanvas"></canvas>
     <canvas id="land1Canvas" style="background-image:url(images/land1.png) ; background-size :cover;"></canvas>
-    <canvas id="land1Snow"></canvas>
+    <canvas id="land1Snow" class="drawingCanvas"></canvas>
 
 
+    <script src="js/Snowflake.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
