adding settings not implemented yet

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,32 @@
     <canvas id="land1Canvas" style="background-image:url(images/land1.png) ; background-size :cover;"></canvas>
     <canvas id="land1Snow" class="drawingCanvas"></canvas>
 
+    <div id="burger">
+        <div></div>
+    </div>
 
     <script src="js/Snowflake.js"></script>
     <script src="js/main.js"></script>
+
+    <section id="param">
+        <form >
+            <div>
+                <label for="speedmulti">Speed Multiplier</label><br>
+                <input type="range" name="speedmulti" id="speedsnow">
+            </div>
+            <div>
+                <label for="numsnow">Number of Snwflakes in each layers</label><br>
+                <input type="range" name="numsnow" id="numsnow">
+            </div>
+            <div>
+                <label for="sizesnow">Size Multiplier of snwoflakes</label><br>
+                <input type="range" name="sizesnow" id="sizesnow">
+            </div>
+            <div>
+                <label for=""></label>
+                <input type="range" name="" id="">
+            </div>
+        </form>
+    </section>
 </body>
 </html>
