added some functions

--- a/src/index.html
+++ b/src/index.html
@@ -31,16 +31,37 @@
                 <input type="range" name="speedmulti" id="speedsnow">
             </div>
             <div>
-                <label for="numsnow">Number of Snwflakes in each layers</label><br>
-                <input type="range" name="numsnow" id="numsnow">
+                <label for="numsnow1">Number of snowflake in layer 1</label><br>
+                <input type="range" name="numsnow1" id="numsnow1" min="10" value="50" max="200">
             </div>
             <div>
-                <label for="sizesnow">Size Multiplier of snwoflakes</label><br>
-                <input type="range" name="sizesnow" id="sizesnow">
+                <label for="numsnow2">Number of snowflake in layer 2</label><br>
+                <input type="range" name="numsnow2" id="numsnow2" min="10" value="50" max="200">
             </div>
             <div>
-                <label for=""></label>
-                <input type="range" name="" id="">
+                <label for="numsnow3">Number of snowflake in layer 3</label><br>
+                <input type="range" name="numsnow3" id="numsnow3" min="10" value="50" max="200">
+            </div>
+            <div>
+                <label for="numsnow4">Number of snowflake in layer 4</label><br>
+                <input type="range" name="numsnow4" id="numsnow4" min="10" value="50" max="200">
+            </div>
+
+            <div>
+                <label for="speedsnow1">Speed multiplier for layer 1</label>
+                <input type="range" name="speedsnow1" id="speedsnow1" min="0" value="1" max="3">
+            </div>
+            <div>
+                <label for="speedsnow2">Speed multiplier for layer 2</label>
+                <input type="range" name="speedsnow2" id="speedsnow2" min="0" value="1" max="3">
+            </div>
+            <div>
+                <label for="speedsnow3">Speed multiplier for layer 3</label>
+                <input type="range" name="speedsnow3" id="speedsnow3" min="0" value="1" max="3">
+            </div>
+            <div>
+                <label for="speedsnow4">Speed multiplier for layer 4</label>
+                <input type="range" name="speedsnow4" id="speedsnow4" min="0" value="1" max="3">
             </div>
         </form>
     </section>
