--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,23 @@
                 <label for="speedsnow4">Speed multiplier for layer 4</label>
                 <input type="range" class="speedmulti" name="speedsnow4" id="speedsnow4" min="0" value="1" max="3" step="0.1" onchange="updateSpeed()">
             </div>
+
+            <div>
+                <label for="sizesnow">Size of snowflakes in layer 1</label>
+                <input type="range" name="sizesnow" id="sizesnow" min="1" value="" max="10">
+            </div>
+            <div>
+                <label for="sizesnow">Size of snowflakes in layer 2</label>
+                <input type="range" name="sizesnow" id="sizesnow" min="1" value="" max="10">
+            </div>
+            <div>
+                <label for="sizesnow">Size of snowflakes in layer 3</label>
+                <input type="range" name="sizesnow" id="sizesnow" min="1" value="" max="10">
+            </div>
+            <div>
+                <label for="sizesnow">Size of snowflakes in layer 4</label>
+                <input type="range" name="sizesnow" id="sizesnow" min="1" value="" max="10">
+            </div>
         </form>
     </section>
 </body>
